--- a/site/css/index.css
+++ b/site/css/index.css
@@ -35,7 +35,11 @@ body {
 }
 .thumb-cell {
 	margin-bottom: 48px;
-	z-index: 1
+	z-index: 1;
+}
+.row {
+	width: auto;
+	margin: 0 auto
 }
 .thumb-holder {
 	display: inline-block;
@@ -103,7 +107,7 @@ body {
 	box-shadow: 0px 2px 0px 0px rgba(0,0,0,0.15);
 }
 .thumb-title {
-	color: #627180;
+	color: #527583;
 	font-size: 32px;
 	margin-bottom: 0;
 }
@@ -119,6 +123,7 @@ body {
 	font-size: 16px;
   	text-shadow: 0 2px rgba(0,0,0,0.07);
 	margin: auto;
+	margin-top: 4px;
 	margin-bottom: 16px;
 }
 .thumb-available-text {
@@ -147,11 +152,17 @@ body {
 .btn-appstore:active, .btn-appstore:hover {
 	background-image: url("../img/btn-thumb-ios-down.png");
 }
+.btn-appstore-empty {
+	background-image: url("../img/btn-thumb-ios-empty.png");
+}
 .btn-android {
 	background-image: url("../img/btn-thumb-android-up.png");
 }
 .btn-android:active, .btn-android:hover {
 	background-image: url("../img/btn-thumb-android-down.png");
+}}
+.btn-android-empty {
+	background-image: url("../img/btn-thumb-android-empty.png");
 }
 .btn-web {
 	background-image: url("../img/btn-thumb-web-up.png");
