--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,14 @@
 @import "image-cycler";
 
-@font-face { font-family: NokiaFC; src: url("../fonts/nokiafc22.ttf"); }
+@font-face { font-family: NokiaFC; src: url(../fonts/nokiafc22.ttf); }
+
+$mainContainerPaddingTop: 100px;
+$mainContainerPaddingBottom: 40px;
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font-family: NokiaFC, serif;
@@ -27,65 +35,193 @@ body {
 
   box-shadow: 0 2px 0 0 #00000033;
 }
-.thumb-cell {
-  margin-bottom: 48px;
-  z-index: 1;
+
+.header-frame {
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  z-index: 100;
+
+  border-style: solid;
+  border-width: 0 0 2px;
+  border-image: url(../images/header-bg.png) 0 0 2 fill stretch;
+
+  box-shadow: 0 4px 0 0 #00000010;
 }
-.thumb-holder {
+.header-logo {
+  margin-top: -46px;
+  width: 267px;
+}
+
+.main-container {
+  padding: $mainContainerPaddingTop 0 40px 0;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+
+  border-style: solid;
+  border-width: 0 4px;
+  border-image: url(../images/general-pane-bg.png) 0 4 fill repeat;
+
+  &:before {
+    content: "";
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    margin-top: -$mainContainerPaddingTop;
+    background-image: url(../images/content-background1.png);
+  }
+
+  @media (min-width: 768px) {
+    width: 750px;
+  }
+  @media (min-width: 992px) {
+    width: 970px;
+  }
+  @media (min-width: 1200px) {
+    width: 1170px;
+  }
+
+  .ground-pile.left {
+    content: "";
+    background-image: url(../images/grounding0-left.png);
+    position: absolute;
+    width: 232px;
+    height: 120px;
+    bottom: 0;
+    left: -2px;
+  }
+  .ground-pile.right {
+    content: "";
+    background-image: url(../images/grounding0-right.png);
+    position: absolute;
+    width: 220px;
+    height: 122px;
+    bottom: 0;
+    right: -4px;
+  }
+}
+
+.about-pane {
+  position: relative;
+  margin: auto auto 64px;
+  max-width: 480px;
+
+  border-style: solid;
+  border-width: 60px 60px 64px 60px;
+  border-image: url(../images/paper-pane.png) 60 60 64 60 fill stretch;
+
+  div {
+    margin: -24px;
+    margin-top: -36px;
+    margin-bottom: -40px;
+    text-shadow: 0 2px rgba(0,0,0,0.05);
+
+    p {
+      color: #755542;
+    }
+  }
+}
+
+.section-title-bg {
+  position: relative;
+  margin: 0 -14px 40px -14px;
+  height: 20px;
+
+  border-style: solid;
+  border-width: 3px 70px 53px 56px;
+  border-image: url(../images/section-title.png) 3 70 53 56 fill stretch;
+
+  .section-title-text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding-top: 14px;
+    text-align: center;
+    text-shadow: 0 2px rgba(20%, 20%, 20%, 0.1);
+    font-size: 24px;
+    color: #826351;
+  }
+
+  .section-badge {
+    position: absolute;
+    top: 0;
+    margin-top: -9px;
+    margin-left: 0;
+
+    @media (max-width: 600px) {
+      margin-left: -36px;
+    }
+  }
+}
+
+.feature-section {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: start;
+  justify-content: center;
+}
+.feature-item {
   display: inline-block;
   position: relative;
-  width: 320px;
+  width: 303px;
   text-shadow: 0 2px rgba(0,0,0,0.1);
+  text-align: center;
+
+  margin: 0 16px 48px ;
+  z-index: 1;
 
   border-style: solid;
   border-width: 10px 10px 18px 10px;
-  border-image: url('../images/pane0-bg.png') 10 10 18 10 fill repeat;
+  border-image: url(../images/pane0-bg.png) 10 10 18 10 fill repeat;
 }
 .thumb-image-container {
+  $thumbWidth: 314px;
+  $thumbHeight: 194px;
+
   position: relative;
   display: block;
-  width: 312px;
-  height: 192px;
+  width: $thumbWidth;
+  height: $thumbHeight;
   margin-bottom: 12px;
   margin-left: -6px;
   margin-top: -6px;
 
-  div.cycler {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  .thumb-image-dim {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background-color: #472f1f;
+      opacity: 0.5;
+      z-index: 3;
   }
-}
-.thumb-image-container:after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background-color: #472f1f;
-  opacity: 0.5;
-  z-index: 3;
-}
-.thumb-icon {
-  position: absolute;
-  width: 96px;
-  height: 96px;
-  margin-left: -48px;
-  left: 50%;
-  top: -16px;
-  z-index: 10;
 
-  background-color: #eee;
-  border: 2px #8a6955 solid;
-  padding: 2px;
+  .thumb-icon {
+    $size: 140px;
 
-  box-shadow: 0 2px 0 0 #00000026;
+    position: absolute;
+    width: $size;
+    height: $size;
+    margin-left: -$size / 2;
+    left: 50%;
+    top: $thumbHeight / 2 - $size / 2;
+    z-index: 10;
+
+    border-radius: 50%;
+
+    box-shadow: 0 $size * 0.05 0 0 #00000026;
+  }
 }
 .thumb-title {
   color: #587e80;
   font-size: 32px;
-  margin-bottom: 0;
+  margin-top: 24px;
+  margin-bottom: 8px;
 }
 .thumb-subtitle {
   color: #627180;
@@ -95,11 +231,12 @@ body {
 }
 .thumb-desc {
   max-width: 300px;
+  padding: 0 8px;
   color: #a3816d;
   font-size: 16px;
   text-shadow: 0 2px rgba(0,0,0,0.07);
   margin-top: 4px;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 .thumb-links-pane {
   display: block;
@@ -113,6 +250,7 @@ body {
   color: #826351;
   font-size: 18px;
   margin-bottom: 2px;
+  margin-top: 4px;
 }
 .thumb-release-date-text {
   color: #a3816d;
@@ -127,225 +265,136 @@ body {
   width: 52px;
   height: 52px;
   display: inline;
-}
-.btn-appstore {
-  background-image: url("../images/btn-thumb-ios-up.png");
-}
-.btn-appstore:active, .btn-appstore:hover {
-  background-image: url("../images/btn-thumb-ios-down.png");
-}
-.btn-appstore-disabled {
-  background-image: url("../images/btn-thumb-ios-disabled.png");
-}
-.btn-android {
-  background-image: url("../images/btn-thumb-android-up.png");
-}
-.btn-android:active, .btn-android:hover {
-  background-image: url("../images/btn-thumb-android-down.png");
-}
-.btn-android-disabled {
-  background-image: url("../images/btn-thumb-android-disabled.png");
-}
-.btn-web {
-  background-image: url("../images/btn-thumb-web-up.png");
-}
-.btn-web:active, .btn-web:hover {
-  background-image: url("../images/btn-thumb-web-down.png");
-}
-.btn-gh {
-  background-image: url("../images/btn-thumb-gh-up.png");
-}
-.btn-gh:active, .btn-gh:hover {
-  background-image: url("../images/btn-thumb-gh-down.png");
-}
-.inactive-link {
-  pointer-events: none;
-  cursor: default;
+
+  &.disabled {
+    pointer-events: none;
+    cursor: default;
+  }
+
+  &.appstore {
+    background-image: url(../images/btn-thumb-ios-up.png);
+    &:active, &:hover {
+      background-image: url(../images/btn-thumb-ios-down.png);
+    }
+    &.disabled {
+      background-image: url(../images/btn-thumb-ios-disabled.png);
+    }
+  }
+  &.android {
+    background-image: url(../images/btn-thumb-android-up.png);
+    &:active, &:hover {
+      background-image: url(../images/btn-thumb-android-down.png);
+    }
+    &.disabled {
+      background-image: url(../images/btn-thumb-android-disabled.png);
+    }
+  }
+  &.web {
+    background-image: url(../images/btn-thumb-web-up.png);
+    &:active, &:hover {
+      background-image: url(../images/btn-thumb-web-down.png);
+    }
+  }
+  &.github {
+    background-image: url(../images/btn-thumb-gh-up.png);
+    &:active, &:hover {
+      background-image: url(../images/btn-thumb-gh-down.png);
+    }
+  }
 }
 .soon-badge {
   width: 100%;
   margin-top: 34px;
 }
+
+.face-holder {
+  width: 100%;
+  display: inline-block;
+  margin-bottom: -40px;
+  text-align: center;
+
+  div {
+    position: relative;
+    width: 0;
+    bottom: 0;
+    margin: auto;
+    z-index: 1;
+
+    .face {
+      position: absolute;
+      cursor: help;
+      bottom: -$mainContainerPaddingBottom;
+      outline : none;
+      transition: margin-bottom 0.15s, transform 0.35s;
+
+      &.miha {
+        right: -1px;
+      }
+      &.antoha {
+        left: -1px;
+      }
+      &:active {
+        margin-bottom: 24px;
+        transform: scale(1.2);
+        z-index: 2;
+      }
+      @media(min-width:768px) {
+        &:hover {
+          margin-bottom: 24px;
+          transform: scale(1.2);
+          z-index: 2;
+        }
+      }
+    }
+  }
+}
+
+.footer-pane {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  background-color: #84dfe2;
+  padding: 16px 0;
+  border-top: 2px solid rgb(179,242,237);
+  z-index: 100;
+  color: white;
+
+  .credits-text {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+}
+
 .btn-social-link {
   margin: 0 4px;
   background-size: 100% 100%;
   width: 48px;
   height: 48px;
   float: left;
-}
-.btn-social-twit {
-  background-image: url("../images/btn-social-twit-up.png");
-}
-.btn-social-twit:active, .btn-social-twit:hover {
-  background-image: url("../images/btn-social-twit-down.png");
-}
-.btn-social-fb {
-  background-image: url("../images/btn-social-fb-up.png");
-}
-.btn-social-fb:active, .btn-social-fb:hover {
-  background-image: url("../images/btn-social-fb-down.png");
-}
-.btn-social-vk {
-  background-image: url("../images/btn-social-vk-up.png");
-}
-.btn-social-vk:active, .btn-social-vk:hover {
-  background-image: url("../images/btn-social-vk-down.png");
-}
-.btn-social-mail {
-  background-image: url("../images/btn-social-mail-up.png");
-}
-.btn-social-mail:active, .btn-social-mail:hover {
-  background-image: url("../images/btn-social-mail-down.png");
-}
-.section-title-bg {
-  position: relative;
-  margin: 0 -14px 40px -14px;
-  padding: 8px 0;
-  height: 70px;
 
-  border-style: solid;
-  border-width: 3px 70px 53px 56px;
-  border-image: url(../images/section-title.png) 3 70 53 56 fill stretch;
-}
-.section-title-text {
-  color: #826351;
-  margin: 4px 0 0 0;
-  text-shadow: 0 2px rgba(20%, 20%, 20%, 0.1);
-  font-size: 24px;
-}
-.section-badge {
-  position: absolute;
-  top: 0;
-  margin-top: -9px;
-  margin-left: -300px;
-}
-@media (max-width: 600px) {
-  .section-badge {
-    margin-left: -190px;
+  &.twit {
+    background-image: url(../images/btn-social-twit-up.png);
+    &:active, &:hover {
+      background-image: url(../images/btn-social-twit-down.png);
+    }
   }
-}
-
-#main-container {
-  padding: 48px 0 40px 0;
-  position: relative;
-  border-style: solid;
-  border-width: 0 4px;
-  border-image: url('../images/general-pane-bg.png') 0 4 fill repeat;
-}
-#main-container-background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin-top: -80px;
-  background-image: url(../images/content-background1.png);
-}
-#header-frame {
-  position: relative;
-  height: 50px;
-  padding: 0;
-  z-index: 100;
-}
-#header-bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-
-  border-style: solid;
-  border-width: 0 0 2px;
-  border-image: url('../images/header-bg.png') 0 0 2 fill stretch;
-}
-#header-shadow {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-
-  box-shadow: 0 4px 0 0 #00000010;
-}
-#img-logo {
-  position: relative;
-  margin-top: -46px;
-  width: 267px;
-  z-index: 999;
-}
-#about-pane {
-  margin: auto auto 64px;
-  max-width: 600px;
-  position: relative;
-
-  border-style: solid;
-  border-width: 60px 60px 64px 60px;
-  border-image: url(../images/paper-pane.png) 60 60 64 60 fill stretch;
-}
-.about-text {
-  margin: -24px;
-  margin-bottom: -36px;
-  text-shadow: 0 2px rgba(0,0,0,0.05);
-}
-.about-text p {
-  color: #755542;
-}
-#grounding-left {
-  content: "";
-  background-image: url('../images/grounding0-left.png');
-  position: absolute;
-  width: 232px;
-  height: 120px;
-  bottom: 0;
-  left: -2px;
-  z-index: 0;
-}
-#grounding-right {
-  content: "";
-  background-image: url('../images/grounding0-right.png');
-  position: absolute;
-  width: 220px;
-  height: 122px;
-  bottom: 0;
-  right: -4px;
-  z-index: 0;
-}
-#face-holder {
-  display: inline-block;
-  position: absolute;
-  bottom: 0;
-  margin: auto;
-  z-index: 1;
-}
-#face-miha {
-  position: absolute;
-  right: -1px;
-  cursor: default;
-  outline : none;
-  bottom: -40px;
-
-  transition: margin-bottom 0.25s;
-}
-#face-miha:hover {
-  margin-bottom: 24px;
-}
-#face-antoha {
-  position: absolute;
-  left: -1px;
-  bottom: -40px;
-  cursor: default;
-  outline : none;
-
-  transition: margin-bottom 0.25s;
-}
-#face-antoha:hover {
-  margin-bottom: 24px;
-}
-#footer-frame {
-  position: relative;
-  background-color: #84dfe2;
-  padding: 16px 0;
-  border-top: 2px solid rgb(179,242,237);
-  z-index: 100;
-}
-#credits-text {
-  color: #fff;
+  &.fb {
+    background-image: url(../images/btn-social-fb-up.png);
+    &:active, &:hover {
+      background-image: url(../images/btn-social-fb-down.png);
+    }
+  }
+  &.vk {
+    background-image: url(../images/btn-social-vk-up.png);
+    &:active, &:hover {
+      background-image: url(../images/btn-social-vk-down.png);
+    }
+  }
+  &.mail {
+    background-image: url(../images/btn-social-mail-up.png);
+    &:active, &:hover {
+      background-image: url(../images/btn-social-mail-down.png);
+    }
+  }
 }
