--- a/src/styles/image-cycler.scss
+++ b/src/styles/image-cycler.scss
@@ -5,23 +5,19 @@ div.cycler {
 	overflow: hidden;
 
 	img.thumb-image {
-		border: 2px #8f6f5b solid;
-
 		position: absolute;
 		left: 0;
 		right: 0;
 
 		z-index: 0;
-		opacity: 1;
+		transform: none;
+		transition: transform 0s;
 
-		transition: opacity 0s;
-	}
-
-	img.thumb-image.inactive {
-		z-index: 1;
-		opacity: 0;
-
-		transition: opacity 1s;
+		&.inactive {
+			z-index: 1;
+			transform: translate(0, 100%);
+			transition: transform 1s;
+		}
 	}
 }
 
