--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+$thumbImageBorderRadius: 20px 20px 0 0;
+
 @import "image-cycler";
 
 @font-face { font-family: NokiaFC; src: url(../fonts/nokiafc22.ttf); }
@@ -11,6 +13,7 @@ html, body {
 }
 
 body {
+  position: relative;
   font-family: NokiaFC, serif;
   font-size: 14px;
   font-smooth: never;
@@ -36,7 +39,7 @@ body {
   box-shadow: 0 2px 0 0 #00000033;
 }
 
-.header-frame {
+.header-pane {
   display: inline-block;
   position: absolute;
   width: 100%;
@@ -110,8 +113,8 @@ body {
   max-width: 480px;
 
   border-style: solid;
-  border-width: 60px 60px 64px 60px;
-  border-image: url(../images/paper-pane.png) 60 60 64 60 fill stretch;
+  border-width: 64px 64px 68px 64px;
+  border-image: url(../images/paper-pane.png) 64 64 68 64 fill stretch;
 
   div {
     margin: -24px;
@@ -166,39 +169,50 @@ body {
 .feature-item {
   display: inline-block;
   position: relative;
-  width: 303px;
+  //width: 303px;
   text-shadow: 0 2px rgba(0,0,0,0.1);
   text-align: center;
 
   margin: 0 16px 48px ;
   z-index: 1;
+}
+.feature-frame {
+  width: 330px;
+  box-sizing: border-box;
+  z-index: 100;
 
   border-style: solid;
-  border-width: 10px 10px 18px 10px;
-  border-image: url(../images/pane0-bg.png) 10 10 18 10 fill repeat;
+  border-width: 20px 16px 18px 16px;
+  border-image: url(../images/feature-frame0.png) 20 16 18 16 fill repeat;
 }
 .thumb-image-container {
-  $thumbWidth: 314px;
-  $thumbHeight: 194px;
+  $thumbWidth: 310px;
+  $thumbHeight: 190px;
 
   position: relative;
   display: block;
   width: $thumbWidth;
   height: $thumbHeight;
-  margin-bottom: 12px;
-  margin-left: -6px;
-  margin-top: -6px;
+  margin: 0 auto -10px auto;
 
   .thumb-image-dim {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      left: 0;
-      top: 0;
-      background-color: #472f1f;
-      opacity: 0.5;
-      z-index: 3;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: #472f1f;
+    opacity: 0.5;
+    z-index: 3;
+
+    border-radius: $thumbImageBorderRadius;
+
+    box-shadow: 0 0 0 2px #333333a0;
+  }
+
+  .thumb-image {
+    border-radius: $thumbImageBorderRadius;
   }
 
   .thumb-icon {
@@ -242,7 +256,7 @@ body {
   display: block;
   text-shadow: initial;
   background-color: #e3c2a3;
-  margin: 0;
+  margin: 0 -2px 2px;
   padding-top: 8px;
   padding-bottom: 4px;
 }
