--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -226,9 +226,13 @@ body {
     top: $thumbHeight / 2 - $size / 2;
     z-index: 10;
 
+    box-shadow: 0 $size * 0.05 0 0 #00000026;
+
     border-radius: 50%;
 
-    box-shadow: 0 $size * 0.05 0 0 #00000026;
+    &.square {
+      border-radius: 10%;
+    }
   }
 }
 .thumb-title {
