Essential webpack configuration.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,8 +6,8 @@ $mainContainerPaddingBottom: 40px;
 $headerLogoMarginTop: -46px;
 $headerLogoWidth: 267px;
 
-@import "image-cycler";
-@import "preloader";
+//@import "image-cycler";
+//@import "preloader";
 
 @font-face { font-family: NokiaFC; src: url(../fonts/nokiafc22.ttf); }
 
