--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,6 @@
 $thumbImageBorderRadius: 16px 16px 0 0;
 
-$color-blue: #84dfe2;
-$mainContainerPaddingTop: 100px;
-$mainContainerPaddingBottom: 40px;
-$headerLogoMarginTop: -46px;
-$headerLogoWidth: 267px;
-
-//@import "image-cycler";
-//@import "preloader";
+@import "common";
 
 @font-face { font-family: NokiaFC; src: url(../fonts/nokiafc22.ttf); }
 
