Minor content improvements.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -45,13 +45,14 @@ html(lang="en")
                     div
                         p(style="text-align: center").
                             Hey there stranger!pug
-                        p(style="text-align: justify").
+                        p(style="text-align: left").
                             We are two-man game dev team full of ideas and ambitions.
-                        p(style="text-align: justify").
-                            Since 2012 we've been working on our own projects, take some freelance jobs and are
-                            always open for interesting offers. Regardless of the purpose, we're glad that you've come.
+                            Tinkering our own projects since 2012, we sometimes take freelance work and are
+                            always open for interesting opportunities.
+                        p(style="text-align: left").
+                            It's so great to see you on our tiny piece of web!
                             Feel free to <a href="mailto:contact@crashinvaders.com">reach us out</a>, we would love to talk! :)
-                        p(style="margin-top: 16px; text-align: right")
+                        p(style="margin-top: 8px; text-align: right")
                             | Yours Sincerely,
                             br
                             | Crashs
@@ -135,12 +136,12 @@ html(lang="en")
                                         href="https://play.google.com/store/apps/details?id=com.crashinvaders.seven")
                                 div.thumb-release-date-text --- 2012 ---
 
-                            div(style="padding: 8px 0")
-                                a.article-link(
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    href="https://gameskeys.net/underrated-board-games-to-play-on-ios")
-                                    |Read recent article
+                            //div(style="padding: 8px 0")
+                            //    a.article-link(
+                            //        target="_blank"
+                            //        rel="noopener noreferrer"
+                            //        href="https://gameskeys.net/underrated-board-games-to-play-on-ios")
+                            //        |Read recent article
 
 
                 div.section-title-bg
