--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -44,7 +44,7 @@ html(lang="en")
                 div.about-pane(data-aos="fade-right" data-aos-delay="250")
                     div
                         p(style="text-align: center").
-                            Hey there stranger!pug
+                            Hey there stranger!
                         p(style="text-align: left").
                             We are two-man game dev team full of ideas and ambitions.
                             Tinkering our own projects since 2012, we sometimes take freelance work and are
