GDX Basis Universal project added.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -100,7 +100,7 @@ html(lang="en")
                             img.thumb-icon(src="../images/icon-jdog.png")
                             div.thumb-image-dim(style="background-color: #a8853f")
                         div.feature-frame
-                            p.thumb-title Jolly Dog
+                            p.thumb-title Jolly Pet
                             p.thumb-desc Simple yet beautiful game for your beloved pet
                             div.thumb-links-pane
                                 p.thumb-available-text Available now on:
@@ -110,7 +110,7 @@ html(lang="en")
                                         href="https://itunes.apple.com/app/id1153421262")
                                     a.btn-app-link.android(
                                         target="_blank",
-                                        href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollydog")
+                                        href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollypet")
                                 div.thumb-release-date-text --- 2016 ---
 
                     div.feature-item
@@ -261,7 +261,7 @@ html(lang="en")
                             p.thumb-title.smaller GDX Texture Packer
                             p.thumb-desc Packs and manages texture atlases for LibGDX game framework
                             div.thumb-links-pane
-                                p.thumb-available-text Get it now on:
+                                p.thumb-available-text Read more:
                                 div(style="display: inline-block")
                                     a.btn-app-link.github(
                                         target="_blank",
@@ -277,12 +277,28 @@ html(lang="en")
                             p.thumb-title GDX VFX
                             p.thumb-desc LibGDX post-processing visual effects library
                             div.thumb-links-pane
-                                p.thumb-available-text Get it now on:
+                                p.thumb-available-text Read more:
                                 div(style="display: inline-block")
                                     a.btn-app-link.github(
                                         target="_blank",
                                         href="https://github.com/crashinvaders/gdx-vfx")
                                 div.thumb-release-date-text --- 2019 ---
+
+                    div.feature-item
+                        div.thumb-image-container
+                            div.cycler(data-thumb-cycle-images="../images/thumb-gdx-basisu0.png")
+                            img.thumb-icon.clean(src="../images/icon-gdx-basisu.png")
+                            div.thumb-image-dim(style="background-color: #87a8a8")
+                        div.feature-frame
+                            p.thumb-title.smaller GDX Basis Universal
+                            p.thumb-desc Basis Universal supercompressed GPU textures for LibGDX game framework.
+                            div.thumb-links-pane
+                                p.thumb-available-text Read more:
+                                div(style="display: inline-block")
+                                    a.btn-app-link.github(
+                                        target="_blank",
+                                        href="https://github.com/crashinvaders/gdx-basis-universal")
+                                div.thumb-release-date-text --- 2020 ---
 
 
                 // Dev faces
@@ -301,7 +317,7 @@ html(lang="en")
 
 
         div.footer-pane
-            p.credits-text 2012-2020 Crashinvaders
+            p.credits-text 2012-2021 Crashinvaders
             div(style="margin: auto")
                 div(style="display: inline-block; margin-bottom: -5px")
                     a.btn-social-link.mail(href="mailto:contact@crashinvaders.com" target="_blank" title="Email")
