Personal links changed to github profiles.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -307,12 +307,12 @@ html(lang="en")
                         input.face.miha(
                             type="image"
                             src="../images/face-miha.png"
-                            onclick="window.open('https://vk.com/theface')"
+                            onclick="window.open('https://github.com/thefacecore')"
                             oncontextmenu="return false")
                         input.face.antoha(
                             type="image"
                             src="../images/face-antoha.png"
-                            onclick="window.open('https://www.linkedin.com/in/anton-chekulaev-4b69b79a')"
+                            onclick="window.open('https://github.com/metaphore')"
                             oncontextmenu="return false")
 
 
